stop button aligned

--- a/webroot/css/us-top-10.less
+++ b/webroot/css/us-top-10.less
@@ -395,8 +395,8 @@
 							position: absolute;
 							left: 117px;
 							top:114px;
-							width: 23px;
-							height: 23px;
+							width: 20px;
+							height: 20px;
 							background: url(../img/preview-off.png);
 							opacity: 0;
 							
@@ -726,8 +726,8 @@
 							position: absolute;
 							left: 117px;
 							top:114px;
-							width: 23px;
-							height: 23px;
+							width: 20px;
+							height: 20px;
 							background: url(../img/preview-off.png);
 							opacity: 0;
 							
